# osu-playground

./: .gitignore  README.md  droid.resume.txt  pyproject.toml  task.md
configs/: auto-map-example.json  example-config.json
docs/: architecture.md  auto-mapping-workflow.md  benchmarking.md  ir-schema.md  pipeline-refactor.md  report-formats.md  smoke-test.md  style-policies.md
src/osu_lab/: __init__.py  __main__.py  cli.py
src/osu_lab/ai/: __init__.py  adapters.py
src/osu_lab/audio/: __init__.py  analyze.py
src/osu_lab/beatmap/: __init__.py  adapters.py  io.py  validate.py  verify_external.py
src/osu_lab/core/: models.py  schema.py  utils.py
src/osu_lab/eval/: acceptance.py  bench.py  map_quality.py
src/osu_lab/generate/: __init__.py  candidate_search.py  chart_policy.py  mapforge.py  note_selection.py  phrase_planner.py  timing_author.py
src/osu_lab/integration/: __init__.py  scoring.py  tools.py
src/osu_lab/live/: __init__.py  inject.py  planner.py  providers.py  window.py
src/osu_lab/replay/: __init__.py  synth.py
src/osu_lab/style/: __init__.py  corpus.py  patterns.py  policies.py  profile.py  prompt.py  prompt_parser.py
src/osu_lab/workflows/: __init__.py  auto_map.py
tests/fixtures/: sample_map.osu
tests/integration/: test_cli.py
tests/unit/: test_acceptance.py  test_ai_adapter.py  test_audio.py  test_auto_mapping_modules.py  test_beatmap_roundtrip.py  test_bench.py  test_generation.py  test_live.py  test_patterns.py  test_replay.py  test_style_index.py  test_verifier.py
